# ev-map

./: .gitignore  LICENSE  Makefile  README.md  generate_map.ipynb  pyproject.toml
docs/: config.js  index.html  stationsCA.js
maps/: stations_map_CA_CHADEMO.geojson  stations_map_CA_J1772COMBO.geojson  stations_map_CA_TESLA.geojson  stations_map_J1772COMBO.geojson  stations_map_US_J1772COMBO.geojson  stations_map_US_TESLA.geojson
