[tool.poetry]
name = "evmap"
version = "0.1.0"
description = ""
authors = ["Christopher Porter <crporter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.8"
geopandas = "^0.11.1"
jupyterlab = "^3.4.5"
matplotlib = "^3.5.3"
numpy = "^1.23.2"
pandas = "^1.4.3"
folium = "^0.12.1"
mapclassify = "^2.4.3"
pygeos = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
